--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+/* Header */
+
 .logo-booleaner {
   height: 100px;
 }
@@ -7,4 +9,19 @@
   background-image: url("../img/pattern.png");
   background-repeat: repeat;
   background-color: #4ea0ff;
+}
+
+/* Main */
+
+.text-date-written-by {
+  color: darkgrey;
+}
+
+.written-by {
+  font-size: 25px;
+  font-weight: 600;
+}
+
+.author {
+  color: #4ea0ff;
 }
