--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@
   font-weight: 800;
 }
 
-.text-date-written-by {
+.text-darkgrey {
   color: darkgrey;
 }
 
@@ -55,4 +55,25 @@ th {
 
 .row-light-blue {
   background-color: #b1e5f2;
+}
+
+/* Footer */
+.text-white {
+  color: white;
+  font-size: 35px;
+  font-weight: 600;
+}
+
+.bg-monitor {
+  width: 400px;
+  height: 300px;
+  background-image: url(../img/monitor.jpg);
+  background-size: cover;
+}
+
+.bg-graph {
+  width: 400px;
+  height: 300px;
+  background-image: url(../img/graph.jpg);
+  background-size: cover;
 }
